@startuml

package User{

    interface IUser{
        +registe(name: string,credentials: Credentials,userRegister: IUserRegister)
        +edit(message: string,userEditor: IUserEditor)
        +delete(id: string,userEditor: IUserEditor)
    }

    interface IUserRegister{
        +registe()
    }

    interface IUserEditor{
        +edit()
        +delete()
    }

    class UserRegister{
        +registe()
    }

    class UserEditor{
        +edit()
        +delete()
    }

    class UserFactory{
        +create(id: string): IUserEditor
    }

    class User

    class Service{
        +getUserByCredentials()
        +getInfromationRoomId()
        +getUserById()
        +getUsersByIdArray()
        +getMembersId()
        +getAllUsers()
    } 
    note bottom of Service
    このクラスの中のメソッドもUser
    に移動してもいいと思う
     end note

    IUserEditor <|.. UserEditor
    IUserRegister <|.. UserRegister
    IUserRegister <.. IUser
    IUserEditor <.. IUser
    IUser <|.. User
    UserEditor <.. UserFactory: <<create>>

}

@enduml